--- a/styles/style.css
+++ b/styles/style.css
@@ -60,9 +60,11 @@ header h1 {
 }
 
 .members {
+  overflow: hidden;
+  cursor: pointer;
   position: relative;
   flex-shrink: 0;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   margin: 2%;
   background: #333333;
   padding: 3rem;
@@ -99,7 +101,32 @@ h1 {
 }
 
 footer p {
+  margin: 20px;
   font-size: 1.5rem;
   color: black;
   text-align: center;
+}
+
+.content {
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transition: 0.3s ease;
+  background: #333333;
+  opacity: 0;
+}
+
+.members:hover .overlay {
+  opacity: 1;
 }
