--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@ header h1 {
 .members img {
   max-width: 100%;
   max-height: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .members h2 {
@@ -101,13 +104,8 @@ h1 {
   text-align: center;
 }
 
-footer p {
-  font-size: 1.5rem;
-  color: black;
-  text-align: center;
-}
-
 .content {
+  font-size: 1.25rem;
   color: white;
   text-align: center;
   position: absolute;
@@ -129,7 +127,7 @@ footer p {
 
 .members:active .overlay,
 .members:hover .overlay {
-  opacity: 1;
+  opacity: 0.9;
 }
 
 #stats {
@@ -139,15 +137,25 @@ footer p {
   margin-left: 2vw;
   margin-right: 2vw;
   padding-bottom: 5vh;
+  margin-bottom: 5vh;
   color: white;
 }
 iframe {
   width: 95%;
   height: 80vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 footer {
   background: #d33f49;
   color: white;
   padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+#memberstitle h1 {
+  color: #d33f49;
 }
