--- a/styles/style.css
+++ b/styles/style.css
@@ -159,3 +159,85 @@ footer {
 #memberstitle h1 {
   color: #d33f49;
 }
+
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60%;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: #3d3d3d;
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: left;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input,
+.login-box .user-box textarea {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label,
+.login-box .user-box textarea:focus ~ label,
+.login-box .user-box textarea:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #d33f49;
+  font-size: 12px;
+}
+
+.login-box button {
+  outline: none;
+  padding: 5px;
+  font-size: 1rem;
+  background-color: #3d3d3d;
+  color: white;
+  border: 2px solid white;
+}
+
+.login-box button:hover {
+  color: #d33f49;
+  cursor: pointer;
+  border: 2px solid #d33f49;
+}
+
+#login-form {
+  padding: 20% 0;
+  position: relative;
+}
+
+textarea {
+  resize: none;
+  height: 10rem;
+  min-width: 100%;
+}
