--- a/styles/style.css
+++ b/styles/style.css
@@ -161,12 +161,10 @@ footer {
 }
 
 .login-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 60%;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 40px;
-  transform: translate(-50%, -50%);
   background: #3d3d3d;
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
@@ -232,8 +230,7 @@ footer {
 }
 
 #login-form {
-  padding: 20% 0;
-  position: relative;
+  padding: 10vh 0;
 }
 
 textarea {
