Added Steckbrief of everyone

--- a/styles/stats.css
+++ b/styles/stats.css
@@ -19,6 +19,11 @@ nav a{
     padding: 5px;
 }
 
+nav img{
+    width:20px;
+    height:20px;
+}
+
 body{
     margin-left: 25%;
     margin-right: 25%;
@@ -36,11 +41,19 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     margin:0;
+    padding:0;
     color: white;
     text-align: right;
     position: absolute;
-    top:115px;
+    top:121px;
     left: 800px;
+}
+
+#infos img{
+    position:absolute;
+    top:133px;
+    left:140px;
+
 }
 
 #titles{
