--- a/styles/style.css
+++ b/styles/style.css
@@ -70,8 +70,8 @@ header h1 {
   background: #3d3d3d;
   padding: 3rem;
   align-self: center;
-  width: 15vw;
-  min-width: 250px;
+  width: 10%;
+  min-width: 13%;
   height: 30vh;
 }
 .members img {
