--- a/styles/stats.css
+++ b/styles/stats.css
@@ -1,78 +1,129 @@
-#stats{
-    align-content: center;
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap");
+* {
+  font-family: Poppins;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+#stats {
+  align-content: center;
+}
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+nav {
+  flex: 0 1 auto;
+  padding: 0.5rem;
+  position: relative;
+  background: #262626;
+  color: #d33f49;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
-header{
-    background: #262626;
+nav > a {
+  font-size: 2.25rem;
+  color: #d33f49;
+  text-decoration: none;
 }
 
-nav{
-    text-decoration: none;
-    color: #d33f49;
+nav img {
+  width: 30px;
 }
 
-nav a{
-    font-size: 24px;
-    color:#d33f49;
-    text-decoration: none;
-    padding: 5px;
+#steckbrief {
+  flex: 1 1 auto;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-image: linear-gradient(
+      297deg,
+      rgba(228, 228, 228, 0.04) 0%,
+      rgba(228, 228, 228, 0.04) 30%,
+      rgba(130, 130, 130, 0.04) 30%,
+      rgba(130, 130, 130, 0.04) 49%,
+      rgba(31, 31, 31, 0.04) 49%,
+      rgba(31, 31, 31, 0.04) 100%
+    ),
+    linear-gradient(
+      283deg,
+      rgba(228, 228, 228, 0.04) 0%,
+      rgba(228, 228, 228, 0.04) 20%,
+      rgba(130, 130, 130, 0.04) 20%,
+      rgba(130, 130, 130, 0.04) 60%,
+      rgba(31, 31, 31, 0.04) 60%,
+      rgba(31, 31, 31, 0.04) 100%
+    ),
+    linear-gradient(
+      242deg,
+      rgba(228, 228, 228, 0.04) 0%,
+      rgba(228, 228, 228, 0.04) 29%,
+      rgba(130, 130, 130, 0.04) 29%,
+      rgba(130, 130, 130, 0.04) 48%,
+      rgba(31, 31, 31, 0.04) 48%,
+      rgba(31, 31, 31, 0.04) 100%
+    ),
+    linear-gradient(90deg, rgb(61, 61, 61), rgb(61, 61, 61));
+}
+#steckbrief > * {
+  margin: 2rem;
+}
+#steckbrief > img {
+  height: 500px;
+}
+#steckbrief h3 {
+  font-weight: 400;
+  font-size: 2.5rem;
+  padding: 0 3rem;
+}
+#steckbrief > div {
+  align-self: center;
+}
+#infos > img {
+  height: 20px;
 }
 
-nav img{
-    width:20px;
-    height:20px;
+#text {
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-shrink: 0;
+  height: 10%;
 }
 
-body{
-    margin-left: 25%;
-    margin-right: 25%;
+#text > div {
+  padding: 0 3rem;
 }
 
-#steckbrief{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #3d3d3d;
+footer {
+  flex: 0 1 auto;
+  background: #d33f49;
+  color: white;
+  padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
-#infos{
-    display: flex;
-    flex-direction: column;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
-    margin:0;
-    padding:0;
-    color: white;
-    text-align: right;
-    position: absolute;
-    top:121px;
-    left: 800px;
-}
-
-#infos img{
-    position:absolute;
-    top:133px;
-    left:140px;
-
-}
-
-#titles{
-    display: flex;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    flex-direction: column;
-    margin:0;
-    color: white;
-    flex-wrap: nowrap;
-}
-
-#name{
-    font-size: 24px;
-    display: flex;
-    flex-direction: row;
-}
-
-#name img{
-    position: absolute;
-    top:70px;
-    left:750px;
+@media screen and (max-width: 400px) {
+  #steckbrief > img {
+    height: auto;
+    width: 90%;
+  }
+  #steckbrief h3 {
+    font-size: 1.5rem;
+    padding: 0 1rem;
+  }
+  #text {
+    font-size: 1rem;
+  }
+  #text > div {
+    padding: 0 1rem;
+  }
 }
