--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,13 @@
 header {
   background: #262626;
 }
+h1 {
+  font-size: 3rem;
+  font-weight: 400;
+  text-align: center;
+}
 
-header h1 {
-  padding: 10px;
+header > h1 {
   color: #d33f49;
   font-size: 3rem;
   font-weight: 400;
@@ -17,9 +21,53 @@ header h1 {
 }
 
 #overview {
-  background-color: #3d3d3d;
+  background-image: linear-gradient(
+      216deg,
+      rgba(77, 77, 77, 0.05) 0%,
+      rgba(77, 77, 77, 0.05) 25%,
+      rgba(42, 42, 42, 0.05) 25%,
+      rgba(42, 42, 42, 0.05) 38%,
+      rgba(223, 223, 223, 0.05) 38%,
+      rgba(223, 223, 223, 0.05) 75%,
+      rgba(36, 36, 36, 0.05) 75%,
+      rgba(36, 36, 36, 0.05) 100%
+    ),
+    linear-gradient(
+      44deg,
+      rgba(128, 128, 128, 0.05) 0%,
+      rgba(128, 128, 128, 0.05) 34%,
+      rgba(212, 212, 212, 0.05) 34%,
+      rgba(212, 212, 212, 0.05) 57%,
+      rgba(25, 25, 25, 0.05) 57%,
+      rgba(25, 25, 25, 0.05) 89%,
+      rgba(135, 135, 135, 0.05) 89%,
+      rgba(135, 135, 135, 0.05) 100%
+    ),
+    linear-gradient(
+      241deg,
+      rgba(55, 55, 55, 0.05) 0%,
+      rgba(55, 55, 55, 0.05) 14%,
+      rgba(209, 209, 209, 0.05) 14%,
+      rgba(209, 209, 209, 0.05) 60%,
+      rgba(245, 245, 245, 0.05) 60%,
+      rgba(245, 245, 245, 0.05) 69%,
+      rgba(164, 164, 164, 0.05) 69%,
+      rgba(164, 164, 164, 0.05) 100%
+    ),
+    linear-gradient(
+      249deg,
+      rgba(248, 248, 248, 0.05) 0%,
+      rgba(248, 248, 248, 0.05) 32%,
+      rgba(148, 148, 148, 0.05) 32%,
+      rgba(148, 148, 148, 0.05) 35%,
+      rgba(202, 202, 202, 0.05) 35%,
+      rgba(202, 202, 202, 0.05) 51%,
+      rgba(181, 181, 181, 0.05) 51%,
+      rgba(181, 181, 181, 0.05) 100%
+    ),
+    linear-gradient(92deg, hsl(214, 0%, 11%), hsl(214, 0%, 11%));
   color: white;
-  padding: 2%;
+  padding: 4vw;
   position: relative;
   justify-content: center;
   display: flex;
@@ -28,27 +76,27 @@ header h1 {
 }
 
 #text {
-  flex: 1;
   position: relative;
-  padding: 10px;
   align-self: center;
+  margin: 2rem;
+  padding: 10px;
   max-width: 800px;
-  min-width: 350px;
+  min-width: 300px;
+  flex: 1;
 }
 
-.overviewChild img {
+#overview img {
   width: 100%;
   height: 100%;
 }
 
-#overview h1 {
+#text > h1 {
   color: #d33f49;
   text-align: left;
-  padding: 0;
-  font-size: 2.5rem;
+  font-size: 2.75rem;
   font-weight: 300;
 }
-#overview p {
+#text > p {
   font-size: 1.25rem;
 }
 
@@ -58,32 +106,91 @@ header h1 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 0 10%;
 }
-
+#memberstitle {
+  margin-top: 3rem;
+}
 .members {
+  position: relative;
+  width: 220px;
+  min-width: 200px;
+  height: 250px;
+  padding: 2rem;
+  margin: 2rem;
+  background-image: repeating-linear-gradient(
+      135deg,
+      rgba(19, 19, 19, 0.02) 0px,
+      rgba(19, 19, 19, 0.02) 132px,
+      rgba(233, 233, 233, 0.02) 132px,
+      rgba(233, 233, 233, 0.02) 257px,
+      rgba(87, 87, 87, 0.02) 257px,
+      rgba(87, 87, 87, 0.02) 356px,
+      rgba(139, 139, 139, 0.02) 356px,
+      rgba(139, 139, 139, 0.02) 449px,
+      rgba(107, 107, 107, 0.02) 449px,
+      rgba(107, 107, 107, 0.02) 540px,
+      rgba(141, 141, 141, 0.02) 540px,
+      rgba(141, 141, 141, 0.02) 606px,
+      rgba(197, 197, 197, 0.02) 606px,
+      rgba(197, 197, 197, 0.02) 754px,
+      rgba(79, 79, 79, 0.02) 754px,
+      rgba(79, 79, 79, 0.02) 851px
+    ),
+    repeating-linear-gradient(
+      135deg,
+      rgba(152, 152, 152, 0.02) 0px,
+      rgba(152, 152, 152, 0.02) 76px,
+      rgba(91, 91, 91, 0.02) 76px,
+      rgba(91, 91, 91, 0.02) 199px,
+      rgba(68, 68, 68, 0.02) 199px,
+      rgba(68, 68, 68, 0.02) 298px,
+      rgba(216, 216, 216, 0.02) 298px,
+      rgba(216, 216, 216, 0.02) 378px,
+      rgba(254, 254, 254, 0.02) 378px,
+      rgba(254, 254, 254, 0.02) 438px,
+      rgba(79, 79, 79, 0.02) 438px,
+      rgba(79, 79, 79, 0.02) 523px,
+      rgba(47, 47, 47, 0.02) 523px,
+      rgba(47, 47, 47, 0.02) 590px,
+      rgba(241, 241, 241, 0.02) 590px,
+      rgba(241, 241, 241, 0.02) 730px
+    ),
+    repeating-linear-gradient(
+      135deg,
+      rgba(39, 39, 39, 0.02) 0px,
+      rgba(39, 39, 39, 0.02) 109px,
+      rgba(131, 131, 131, 0.02) 109px,
+      rgba(131, 131, 131, 0.02) 202px,
+      rgba(18, 18, 18, 0.02) 202px,
+      rgba(18, 18, 18, 0.02) 329px,
+      rgba(217, 217, 217, 0.02) 329px,
+      rgba(217, 217, 217, 0.02) 405px,
+      rgba(93, 93, 93, 0.02) 405px,
+      rgba(93, 93, 93, 0.02) 487px,
+      rgba(194, 194, 194, 0.02) 487px,
+      rgba(194, 194, 194, 0.02) 551px,
+      rgba(202, 202, 202, 0.02) 551px,
+      rgba(202, 202, 202, 0.02) 614px,
+      rgba(224, 224, 224, 0.02) 614px,
+      rgba(224, 224, 224, 0.02) 747px
+    ),
+    linear-gradient(90deg, rgb(52, 52, 52), rgb(51, 51, 51));
+  border-radius: 0.5rem;
+  align-self: center;
   text-align: center;
   overflow: hidden;
   cursor: pointer;
-  position: relative;
-  flex-shrink: 0;
-  border-radius: 0.5rem;
-  margin: 2%;
-  background: #3d3d3d;
-  padding: 3rem;
-  align-self: center;
-  width: 10%;
-  min-width: 200px;
-  height: 30vh;
 }
 .members img {
-  max-width: 100%;
-  max-height: 80%;
+  border-radius: 50%;
+  height: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-
 .members h2 {
+  font-size: 1.25rem;
   color: white;
 }
 
@@ -95,13 +202,6 @@ h2 {
   padding: 10px;
   font-size: 1.5rem;
   font-weight: 300;
-  text-align: center;
-}
-
-h1 {
-  padding: 10px;
-  font-size: 3rem;
-  font-weight: 400;
   text-align: center;
 }
 
@@ -131,7 +231,7 @@ h1 {
   opacity: 0.9;
 }
 
-#stats {
+/* #stats {
   position: relative;
   background-color: #3d3d3d;
   margin-top: 10vh;
@@ -147,7 +247,7 @@ iframe {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 footer {
   background: #d33f49;
@@ -168,7 +268,6 @@ footer {
   padding: 40px;
   background: #3d3d3d;
   box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
 }
 
 .login-box h2 {
@@ -231,7 +330,7 @@ footer {
 }
 
 #login-form {
-  padding: 10vh 0;
+  margin: 10rem 0;
 }
 
 textarea {
