--- a/styles/stats.css
+++ b/styles/stats.css
@@ -74,8 +74,10 @@ nav img {
 #steckbrief > * {
   margin: 2rem;
 }
+
 #steckbrief > img {
   height: 500px;
+  object-fit: contain;
 }
 #steckbrief h3 {
   font-weight: 400;
@@ -118,12 +120,14 @@ footer {
   }
   #steckbrief h3 {
     font-size: 1.5rem;
-    padding: 0 1rem;
   }
   #text {
     font-size: 1rem;
   }
   #text > div {
     padding: 0 1rem;
+  }
+  #steckbrief h3 {
+    padding: 1rem;
   }
 }
