--- a/styles/style.css
+++ b/styles/style.css
@@ -22,50 +22,50 @@ header > h1 {
 
 #overview {
   background-image: linear-gradient(
-      216deg,
-      rgba(77, 77, 77, 0.05) 0%,
-      rgba(77, 77, 77, 0.05) 25%,
-      rgba(42, 42, 42, 0.05) 25%,
-      rgba(42, 42, 42, 0.05) 38%,
-      rgba(223, 223, 223, 0.05) 38%,
-      rgba(223, 223, 223, 0.05) 75%,
-      rgba(36, 36, 36, 0.05) 75%,
-      rgba(36, 36, 36, 0.05) 100%
+      12deg,
+      rgba(193, 193, 193, 0.05) 0%,
+      rgba(193, 193, 193, 0.05) 2%,
+      rgba(129, 129, 129, 0.05) 2%,
+      rgba(129, 129, 129, 0.05) 27%,
+      rgba(185, 185, 185, 0.05) 27%,
+      rgba(185, 185, 185, 0.05) 66%,
+      rgba(83, 83, 83, 0.05) 66%,
+      rgba(83, 83, 83, 0.05) 100%
     ),
     linear-gradient(
-      44deg,
-      rgba(128, 128, 128, 0.05) 0%,
-      rgba(128, 128, 128, 0.05) 34%,
-      rgba(212, 212, 212, 0.05) 34%,
-      rgba(212, 212, 212, 0.05) 57%,
-      rgba(25, 25, 25, 0.05) 57%,
-      rgba(25, 25, 25, 0.05) 89%,
-      rgba(135, 135, 135, 0.05) 89%,
-      rgba(135, 135, 135, 0.05) 100%
+      321deg,
+      rgba(240, 240, 240, 0.05) 0%,
+      rgba(240, 240, 240, 0.05) 13%,
+      rgba(231, 231, 231, 0.05) 13%,
+      rgba(231, 231, 231, 0.05) 34%,
+      rgba(139, 139, 139, 0.05) 34%,
+      rgba(139, 139, 139, 0.05) 71%,
+      rgba(112, 112, 112, 0.05) 71%,
+      rgba(112, 112, 112, 0.05) 100%
     ),
     linear-gradient(
-      241deg,
-      rgba(55, 55, 55, 0.05) 0%,
-      rgba(55, 55, 55, 0.05) 14%,
-      rgba(209, 209, 209, 0.05) 14%,
-      rgba(209, 209, 209, 0.05) 60%,
-      rgba(245, 245, 245, 0.05) 60%,
-      rgba(245, 245, 245, 0.05) 69%,
-      rgba(164, 164, 164, 0.05) 69%,
-      rgba(164, 164, 164, 0.05) 100%
+      236deg,
+      rgba(189, 189, 189, 0.05) 0%,
+      rgba(189, 189, 189, 0.05) 47%,
+      rgba(138, 138, 138, 0.05) 47%,
+      rgba(138, 138, 138, 0.05) 58%,
+      rgba(108, 108, 108, 0.05) 58%,
+      rgba(108, 108, 108, 0.05) 85%,
+      rgba(143, 143, 143, 0.05) 85%,
+      rgba(143, 143, 143, 0.05) 100%
     ),
     linear-gradient(
-      249deg,
-      rgba(248, 248, 248, 0.05) 0%,
-      rgba(248, 248, 248, 0.05) 32%,
-      rgba(148, 148, 148, 0.05) 32%,
-      rgba(148, 148, 148, 0.05) 35%,
-      rgba(202, 202, 202, 0.05) 35%,
-      rgba(202, 202, 202, 0.05) 51%,
-      rgba(181, 181, 181, 0.05) 51%,
-      rgba(181, 181, 181, 0.05) 100%
+      96deg,
+      rgba(53, 53, 53, 0.05) 0%,
+      rgba(53, 53, 53, 0.05) 53%,
+      rgba(44, 44, 44, 0.05) 53%,
+      rgba(44, 44, 44, 0.05) 82%,
+      rgba(77, 77, 77, 0.05) 82%,
+      rgba(77, 77, 77, 0.05) 98%,
+      rgba(8, 8, 8, 0.05) 98%,
+      rgba(8, 8, 8, 0.05) 100%
     ),
-    linear-gradient(92deg, hsl(214, 0%, 11%), hsl(214, 0%, 11%));
+    linear-gradient(334deg, rgb(37, 36, 36), rgb(37, 36, 36));
   color: white;
   padding: 4vw;
   position: relative;
@@ -266,7 +266,51 @@ footer {
   max-width: 1200px;
   margin: 0 auto;
   padding: 40px;
-  background: #3d3d3d;
+  background-image: linear-gradient(
+      12deg,
+      rgba(193, 193, 193, 0.05) 0%,
+      rgba(193, 193, 193, 0.05) 2%,
+      rgba(129, 129, 129, 0.05) 2%,
+      rgba(129, 129, 129, 0.05) 27%,
+      rgba(185, 185, 185, 0.05) 27%,
+      rgba(185, 185, 185, 0.05) 66%,
+      rgba(83, 83, 83, 0.05) 66%,
+      rgba(83, 83, 83, 0.05) 100%
+    ),
+    linear-gradient(
+      321deg,
+      rgba(240, 240, 240, 0.05) 0%,
+      rgba(240, 240, 240, 0.05) 13%,
+      rgba(231, 231, 231, 0.05) 13%,
+      rgba(231, 231, 231, 0.05) 34%,
+      rgba(139, 139, 139, 0.05) 34%,
+      rgba(139, 139, 139, 0.05) 71%,
+      rgba(112, 112, 112, 0.05) 71%,
+      rgba(112, 112, 112, 0.05) 100%
+    ),
+    linear-gradient(
+      236deg,
+      rgba(189, 189, 189, 0.05) 0%,
+      rgba(189, 189, 189, 0.05) 47%,
+      rgba(138, 138, 138, 0.05) 47%,
+      rgba(138, 138, 138, 0.05) 58%,
+      rgba(108, 108, 108, 0.05) 58%,
+      rgba(108, 108, 108, 0.05) 85%,
+      rgba(143, 143, 143, 0.05) 85%,
+      rgba(143, 143, 143, 0.05) 100%
+    ),
+    linear-gradient(
+      96deg,
+      rgba(53, 53, 53, 0.05) 0%,
+      rgba(53, 53, 53, 0.05) 53%,
+      rgba(44, 44, 44, 0.05) 53%,
+      rgba(44, 44, 44, 0.05) 82%,
+      rgba(77, 77, 77, 0.05) 82%,
+      rgba(77, 77, 77, 0.05) 98%,
+      rgba(8, 8, 8, 0.05) 98%,
+      rgba(8, 8, 8, 0.05) 100%
+    ),
+    linear-gradient(334deg, rgb(37, 36, 36), rgb(37, 36, 36));
   box-sizing: border-box;
 }
 
@@ -318,7 +362,7 @@ footer {
   outline: none;
   padding: 5px;
   font-size: 1rem;
-  background-color: #3d3d3d;
+  background-color: inherit;
   color: white;
   border: 2px solid white;
 }
