--- a/styles/stats.css
+++ b/styles/stats.css
@@ -43,33 +43,50 @@ nav img {
   align-items: center;
   flex-wrap: wrap;
   background-image: linear-gradient(
-      297deg,
-      rgba(228, 228, 228, 0.04) 0%,
-      rgba(228, 228, 228, 0.04) 30%,
-      rgba(130, 130, 130, 0.04) 30%,
-      rgba(130, 130, 130, 0.04) 49%,
-      rgba(31, 31, 31, 0.04) 49%,
-      rgba(31, 31, 31, 0.04) 100%
+      120deg,
+      rgba(193, 193, 193, 0.05) 0%,
+      rgba(193, 193, 193, 0.05) 2%,
+      rgba(129, 129, 129, 0.05) 2%,
+      rgba(129, 129, 129, 0.05) 27%,
+      rgba(185, 185, 185, 0.05) 27%,
+      rgba(185, 185, 185, 0.05) 66%,
+      rgba(83, 83, 83, 0.05) 66%,
+      rgba(83, 83, 83, 0.05) 100%
     ),
     linear-gradient(
-      283deg,
-      rgba(228, 228, 228, 0.04) 0%,
-      rgba(228, 228, 228, 0.04) 20%,
-      rgba(130, 130, 130, 0.04) 20%,
-      rgba(130, 130, 130, 0.04) 60%,
-      rgba(31, 31, 31, 0.04) 60%,
-      rgba(31, 31, 31, 0.04) 100%
+      442deg,
+      rgba(240, 240, 240, 0.05) 0%,
+      rgba(240, 240, 240, 0.05) 13%,
+      rgba(231, 231, 231, 0.05) 13%,
+      rgba(231, 231, 231, 0.05) 34%,
+      rgba(139, 139, 139, 0.05) 34%,
+      rgba(139, 139, 139, 0.05) 71%,
+      rgba(112, 112, 112, 0.05) 71%,
+      rgba(112, 112, 112, 0.05) 100%
     ),
     linear-gradient(
-      242deg,
-      rgba(228, 228, 228, 0.04) 0%,
-      rgba(228, 228, 228, 0.04) 29%,
-      rgba(130, 130, 130, 0.04) 29%,
-      rgba(130, 130, 130, 0.04) 48%,
-      rgba(31, 31, 31, 0.04) 48%,
-      rgba(31, 31, 31, 0.04) 100%
+      344deg,
+      rgba(189, 189, 189, 0.05) 0%,
+      rgba(189, 189, 189, 0.05) 47%,
+      rgba(138, 138, 138, 0.05) 47%,
+      rgba(138, 138, 138, 0.05) 58%,
+      rgba(108, 108, 108, 0.05) 58%,
+      rgba(108, 108, 108, 0.05) 85%,
+      rgba(143, 143, 143, 0.05) 85%,
+      rgba(143, 143, 143, 0.05) 100%
     ),
-    linear-gradient(90deg, rgb(61, 61, 61), rgb(61, 61, 61));
+    linear-gradient(
+      204deg,
+      rgba(53, 53, 53, 0.05) 0%,
+      rgba(53, 53, 53, 0.05) 53%,
+      rgba(44, 44, 44, 0.05) 53%,
+      rgba(44, 44, 44, 0.05) 82%,
+      rgba(77, 77, 77, 0.05) 82%,
+      rgba(77, 77, 77, 0.05) 98%,
+      rgba(8, 8, 8, 0.05) 98%,
+      rgba(8, 8, 8, 0.05) 100%
+    ),
+    linear-gradient(429deg, rgb(33, 33, 33), rgb(33, 33, 33));
 }
 #steckbrief > * {
   margin: 2rem;
