--- a/styles/stats.css
+++ b/styles/stats.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 nav {
   flex: 0 1 auto;
@@ -26,7 +27,7 @@ nav {
 }
 
 nav > a {
-  font-size: 2.25rem;
+  font-size: 3rem;
   color: #d33f49;
   text-decoration: none;
 }
@@ -106,15 +107,6 @@ nav img {
   position: relative;
   align-self: center;
 }
-/* #sippsepp {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: #3d3d3d;
-  z-index: 10;
-} */
 #text-field::before {
   content: "";
   position: absolute;
@@ -155,6 +147,14 @@ footer {
   opacity: 0;
 }
 
+@media screen and (max-width: 700px) {
+  #steckbrief h3 {
+    font-size: 1.75rem;
+  }
+  #text {
+    font-size: 1.125rem;
+  }
+}
 @media screen and (max-width: 400px) {
   #steckbrief > img {
     height: auto;
@@ -162,6 +162,7 @@ footer {
   }
   #steckbrief h3 {
     font-size: 1.5rem;
+    padding: 1rem;
   }
   #text {
     font-size: 1rem;
@@ -169,7 +170,7 @@ footer {
   #text > div {
     padding: 0 1rem;
   }
-  #steckbrief h3 {
-    padding: 1rem;
+  nav > a {
+    font-size: 2.25rem;
   }
 }
